--- a/Projects/BowlingScore/CMakeLists.txt
+++ b/Projects/BowlingScore/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
+set (CMAKE_CONFIGURATION_TYPES ${CMAKE_BUILD_TYPE} CACHE STRING "" FORCE)
 project(Bowling)
 
 set(CMAKE_CXX_STANDARD 17)
