Added ViewFactory [Status] In Progress [Topic] Implementation of View model [Action] Added ViewFactory

--- a/Projects/BowlingScore/tests/CMakeLists.txt
+++ b/Projects/BowlingScore/tests/CMakeLists.txt
@@ -18,6 +18,7 @@ set (CONSOLE_VIEW_INC ../interface/IView.h ../hdr/ConsoleView.h ../src/ConsoleVi
 set (POINTS_LISTENER_SIMULATION_INC ../interface/IPointsListener.h ../hdr/PointsListenerSimulation.h ../src/PointsListenerSimulation.cpp hdr/PointsListenerSimulationTest.hpp src/PointsListenerSimulationTest.cpp)
 set (POINTS_LISTENER_LOCAL_INC ../interface/IPointsListener.h ../hdr/PointsListenerLocal.h ../src/PointsListenerLocal.cpp hdr/PointsListenerLocalTest.hpp src/PointsListenerLocalTest.cpp)
 set (POINTS_LISTENER_FACTORY_INC ../interface/IPointsListenerFactory.h ../hdr/PointsListenerFactory.h ../src/PointsListenerFactory.cpp hdr/PointsListenerFactoryTest.hpp src/PointsListenerFactoryTest.cpp)
+set (VIEW_FACTORY_INC ../interface/IViewFactory.h ../hdr/ViewFactory.h ../src/ViewFactory.cpp hdr/ViewFactoryTest.hpp src/ViewFactoryTest.cpp)
 
 # Add test cpp file
 add_executable (TestBase
@@ -29,6 +30,7 @@ add_executable (TestBase
     ${POINTS_LISTENER_SIMULATION_INC}
     ${POINTS_LISTENER_LOCAL_INC}
     ${POINTS_LISTENER_FACTORY_INC}
+    ${VIEW_FACTORY_INC}
 )
 
 # Link test executable against gtest & gtest_main
