Deactivate CI/CD until the subprojects will be properly configured [Status] Done [Topic] CI/CD [Action] [Subaction]

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
-language: cpp
+#language: cpp
 
-compiler:
-  - gcc
+#compiler:
+#  - gcc
 
 install:
   - DEPS_DIR="${TRAVIS_BUILD_DIR}/deps"
@@ -13,12 +13,12 @@ install:
   - cd ${TRAVIS_BUILD_DIR}
 
 
-before_script:
-  - cd Projects/BowlingScore
-  - mkdir build
-  - cd build
-  - cmake ..
+#before_script:
+#  - cd Projects/BowlingScore
+#  - mkdir build
+#  - cd build
+#  - cmake ..
 
-script:
-  - make
+#script:
+#  - make
 #  - make test
