Socket Client and Socket Server classes

--- a/Projects/PointsGenerator/CMakeLists.txt
+++ b/Projects/PointsGenerator/CMakeLists.txt
@@ -7,3 +7,9 @@ project(PointsGenerator)
 file(GLOB SOURCES "src/PointsGenerator.c")
 
 add_executable(PointsGenerator ${SOURCES})
+
+add_custom_command(
+        TARGET PointsGenerator POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy
+                ${CMAKE_SOURCE_DIR}/src/config.cfg
+                ${CMAKE_CURRENT_BINARY_DIR}/config.cfg)
