Admin Panel WIN and Linux version

--- a/Projects/AdminPanel/CMakeLists.txt
+++ b/Projects/AdminPanel/CMakeLists.txt
@@ -7,3 +7,9 @@ project(AdminPanel)
 file(GLOB SOURCES "src/AdminPanel.c")
 
 add_executable(AdminPanel ${SOURCES})
+
+add_custom_command(
+        TARGET AdminPanel POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy
+                ${CMAKE_SOURCE_DIR}/src/config.cfg
+                ${CMAKE_CURRENT_BINARY_DIR}/config.cfg)
